[project]
name = "garmin-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.9.2",
    "garminconnect>=0.2.28",
    "openai>=1.92.3",
    "python-dotenv>=1.1.1",
]

[tool.uv]
link-mode = "copy"

[tool.basedpyright]
typeCheckingMode = "standard"
